@@ -1,5 +1,5 @@
-.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.33.
-.TH LDAPVI "1" "January 2004" "ldapvi 1.1" "User Commands"
+.\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.36.
+.TH LDAPVI "1" "November 2005" "ldapvi 1.3" "User Commands"
 .SH NAME
 ldapvi \- LDAP client
 .SH SYNOPSIS
@@ -8,6 +8,9 @@ ldapvi \- LDAP client
 .SH DESCRIPTION
 .IP
 ldapvi \fB\-\-diff\fR FILE1 FILE2
+.SS "Quickstart:"
+.IP
+ldapvi \fB\-\-discover\fR \fB\-\-host\fR HOSTNAME
 .PP
 Perform an LDAP search and update results using a text editor.
 .SS "Connection options:"
@@ -16,7 +19,7 @@ Perform an LDAP search and update results using a text editor.
 Server.
 .TP
 \fB\-D\fR, \fB\-\-user\fR USER
-Search filter or DN: User to bind as.
+Search filter or DN: User to bind as.     [1]
 .TP
 \fB\-w\fR, \fB\-\-password\fR SECRET
 USER's password.
@@ -33,10 +36,19 @@ Sort control (critical).
 .SS "Miscellaneous options:"
 .TP
 \fB\-A\fR, \fB\-\-add\fR
-Don't search, start with empty file.
+Don't search, start with empty file.  See \fB\-O\fR.
+.TP
+\fB\-O\fR, \fB\-\-class\fR OBJCLASS
+Class to add.  Can be repeated.  Implies \fB\-A\fR.
 .TP
 \fB\-a\fR, \fB\-\-deref\fR
 never|searching|finding|always
+.TP
+\fB\-d\fR, \fB\-\-discover\fR
+Auto\-detect naming contexts.              [2]
+.TP
+\fB\-c\fR, \fB\-\-config\fR
+Print parameters in ldap.conf syntax.
 .TP
 \fB\-M\fR, \fB\-\-managedsait\fR
 manageDsaIT control (critical).
@@ -50,29 +62,48 @@ Disable progress output.
 \fB\-v\fR, \fB\-\-verbose\fR
 Note every update.
 .TP
--!, \fB\-\-noquestions\fR
+\-!, \fB\-\-noquestions\fR
 Don't ask for confirmation.
 .TP
 \fB\-H\fR, \fB\-\-help\fR
 This help.
 .PP
 Environment variables: VISUAL, EDITOR, PAGER.
-.SS "User names can be specified as distinguished names:"
+.SS "[1] User names can be specified as distinguished names:"
 .IP
 uid=foo,ou=bar,dc=acme,dc=com
-.SS "or search filters:"
+.IP
+or search filters:
 .IP
 (uid=foo)
-.PP
-Note the parenthesis, which can be omitted from search filters
-usually, but are required here.  For this searching bind to
-work your client library must be configured with appropriate
+.IP
+Note the use of parenthesis, which can be omitted from search
+filters usually but are required here.  For this searching bind to
+work, your client library must be configured with appropriate
 default search parameters.
+.PP
+[2] Repeat the search for each naming context found and present the
+.TP
+concatenation of all search results.
+Conflicts with \fB\-\-base\fR.
+.IP
+With \fB\-\-config\fR, show a BASE configuration line for each context.
 .PP
 A special (offline) option is \fB\-\-diff\fR, which compares two files
 and writes any changes to standard output in LDIF format.
 .SH "REPORTING BUGS"
 Report bugs to "david@lichteblau.com".
+.SH GETTING STARTED
+Assuming a suitably configured LDAP library, run ldapvi without arguments
+to see all entries available. 
+
+Otherwise, try `ldapvi -h HOSTNAME --discover' to query the ROOT DSE for
+available naming contexts.
+
+Once that works, run `ldapvi -h HOSTNAME --discover --config' to
+generate sample configuration that can be pasted into ~/.ldaprc or
+/etc/ldap/ldap.conf.
+
 .SH FILE FORMAT
 ldapvi uses an LDIF-like syntax, but not standard LDIF.  For a precise
 definition, see `ldapvi-file' below.  LDIF is defined in RFC 2849.
